force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__AdvancePayOBHOurCompany__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AdvancePayOBHOurCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADVANCE PAYMENT ON BEHALF OF OUR COMPANY</label>
    <type>Checkbox</type>
</CustomField>