force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__AmountBuyInclTAX__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountBuyInclTAX__c</fullName>
    <label>AMOUNT BUYING INCL TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>