force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__AmountOfSellTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfSellTaxUSD__c</fullName>
    <label>AMOUNT OF SELLING TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>