force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__BankAccountForPay__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankAccountForPay__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT FOR PAYMENT</label>
    <referenceTo>clofor_com_cfs__BankAccount__c</referenceTo>
    <relationshipLabel>TRS BILL</relationshipLabel>
    <relationshipName>TRSBillBankACPayment</relationshipName>
    <type>Lookup</type>
</CustomField>