force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__BankAccountForRcv__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankAccountForRcv__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT FOR RECEIVING</label>
    <referenceTo>clofor_com_cfs__BankAccount__c</referenceTo>
    <relationshipLabel>TRS BILL (BANK ACCOUNT FOR RECEIVING)</relationshipLabel>
    <relationshipName>TRSBillBankACCRcv</relationshipName>
    <type>Lookup</type>
</CustomField>