force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__BeneficiaryBuy__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BeneficiaryBuy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BENEFICIARY-BUYING</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRS BILL (BENEFICIARY-BUYING)</relationshipLabel>
    <relationshipName>TRSBillBeneficiary</relationshipName>
    <type>Lookup</type>
</CustomField>