force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__BillDisplayNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BillDisplayNo__c</fullName>
    <label>BILLING DISPLAY NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>