force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__BuyCreditACCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyCreditACCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BUYING CREDIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>TRS BILL</relationshipLabel>
    <relationshipName>TRSBillBuyCreditACCode</relationshipName>
    <type>Lookup</type>
</CustomField>