force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__BuyDebitACCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyDebitACCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BUYING DEBIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>TRS BILL (BUYING DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>TRSBillBuyDebitACCode</relationshipName>
    <type>Lookup</type>
</CustomField>