force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__BuyVATDebitACCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyVATDebitACCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BUYING VAT DEBIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>TRS BILL (BUYING VAT DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>TRSBillBuyVATDebitACCode</relationshipName>
    <type>Lookup</type>
</CustomField>