force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__ChargeUnitTotal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ChargeUnitTotal__c</fullName>
    <label>CHARGE UNIT(TOTAL)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>