force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__CorporateNumberOfInvoiceTo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CorporateNumberOfInvoiceTo__c</fullName>
    <formula>clofor_com_cfs__InvoiceTo__r.clofor_com_cfs__CorporateNumber__c</formula>
    <label>Corporate Number of Invoice To</label>
    <type>Text</type>
</CustomField>