force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__DescriptionInDebit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DescriptionInDebit__c</fullName>
    <label>DESCRIPTION IN DEBIT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>