force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__DiscountAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DiscountAmountFCY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount Amount(FCY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>