force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__EXRateBuyCredit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EXRateBuyCredit__c</fullName>
    <label>EXCHANGE RATE-BUYING(CREDIT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>