force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__EXrateBuyVAT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EXrateBuyVAT__c</fullName>
    <label>EXCHANGE RATE-BUYING(VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>