force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__EXRateIDDBCR__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EXRateIDDBCR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXCHANGE RATE ID-DEBIT/CREDIT</label>
    <referenceTo>clofor_com_cfs__MgmtMaster__c</referenceTo>
    <relationshipLabel>TRS BILL</relationshipLabel>
    <relationshipName>TRSBillEXRateIDDBCR</relationshipName>
    <type>Lookup</type>
</CustomField>