force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__FinalQuantityGoodsSOProduct__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FinalQuantityGoodsSOProduct__c</fullName>
    <formula>clofor_com_cfs__GoodsSOProduct__r.clofor_com_cfs__FinalQuantity__c</formula>
    <label>Final Quantity in Goods S/O+Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>