force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__GoodsPOID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GoodsPOID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goods P/O ID</label>
    <referenceTo>clofor_com_cfs__GoodsPurchasingOrder__c</referenceTo>
    <relationshipLabel>TRS BILL</relationshipLabel>
    <relationshipName>TRSBill</relationshipName>
    <type>Lookup</type>
</CustomField>