force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__GoodsPOProductID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GoodsPOProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goods P/O+Product ID(old)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.clofor_com_cfs__GoodsPOID__c</field>
            <operation>equals</operation>
            <valueField>clofor_com_cfs__GoodsPOProduct__c.clofor_com_cfs__GoodsPOID__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__GoodsPOProduct__c</referenceTo>
    <relationshipLabel>TRS BILL</relationshipLabel>
    <relationshipName>TRSBill</relationshipName>
    <type>Lookup</type>
</CustomField>