force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__GoodsPOUpdateStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GoodsPOUpdateStatus__c</fullName>
    <label>Goods P/O Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__BillUpdateStatus</valueSetName>
    </valueSet>
</CustomField>