force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__GoodsSOProduct__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GoodsSOProduct__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Goods S/O+Product</label>
    <referenceTo>clofor_com_cfs__SalesOrderProduct__c</referenceTo>
    <relationshipLabel>TRS BILL (GOODS S/O+PRODUCT)</relationshipLabel>
    <relationshipName>TRSBillSOProduct</relationshipName>
    <type>Lookup</type>
</CustomField>