force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__GoodsSOProductID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GoodsSOProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>not in use. will be deleted</inlineHelpText>
    <label>Goods S/O+Product ID(Old)</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>clofor_com_cfs__SalesOrderProduct__c.clofor_com_cfs__GoodSalesOrderID__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__SalesOrderProduct__c</referenceTo>
    <relationshipLabel>TRS BILL</relationshipLabel>
    <relationshipName>TRSBill</relationshipName>
    <type>Lookup</type>
</CustomField>