force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__ListPriceAfterDiscountLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ListPriceAfterDiscountLocal__c</fullName>
    <label>List Price after Discount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>