force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__ListPriceBeforeDiscountFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ListPriceBeforeDiscountFCY__c</fullName>
    <label>List Price before Discount(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>