force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__PayDueDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PayDueDate__c</fullName>
    <label>PAYMENT DUE DATE</label>
    <type>Date</type>
</CustomField>