force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__PaySettledDateBuying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaySettledDateBuying__c</fullName>
    <label>PAYMENT SETTLED DATE-BUYING</label>
    <type>Date</type>
</CustomField>