force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__PayTo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PayTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAYMENT TO</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRS BILL (PAYMENT TO)</relationshipLabel>
    <relationshipName>TRSBillPayTo</relationshipName>
    <type>Lookup</type>
</CustomField>