force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__PayTypeBuying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PayTypeBuying__c</fullName>
    <label>PAYMENT TYPE-BUYING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ReceiptancePaymentType</valueSetName>
    </valueSet>
</CustomField>