force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__PlanGWMT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlanGWMT__c</fullName>
    <label>Plan G.W(MT)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>