force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__Print__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Print__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PRINT</label>
    <type>Checkbox</type>
</CustomField>