force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__ProductNameonPackingList__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProductNameonPackingList__c</fullName>
    <label>Product Name on Packing List</label>
    <type>TextArea</type>
</CustomField>