force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__ProfitInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitInclTaxUSD__c</fullName>
    <formula>clofor_com_cfs__mountSellInclTAXUSD__c -  clofor_com_cfs__AmountBuyInclTAXUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT INCL TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>