force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__ProfitNICTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitNICTaxLocal__c</fullName>
    <formula>clofor_com_cfs__TotalAmountOfSellLocal__c -  clofor_com_cfs__TotalAmountOfBuyLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT NIC TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>