force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__ProfitRatioNICTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitRatioNICTaxLocal__c</fullName>
    <formula>( clofor_com_cfs__TotalAmountOfSellLocal__c -  clofor_com_cfs__TotalAmountOfBuyLocal__c )/ clofor_com_cfs__TotalAmountOfSellLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT RATIO NIC TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>