force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__ProfitRatioNICTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitRatioNICTaxUSD__c</fullName>
    <formula>( clofor_com_cfs__TotalAmountOfSellUSD__c -  clofor_com_cfs__TotalAmountOfBuyUSD__c )/clofor_com_cfs__TotalAmountOfSellUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT RATIO NIC TAX(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>