force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__RcvTypeSell__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RcvTypeSell__c</fullName>
    <label>RECEIPTANCE TYPE-SELLING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ReceiptancePaymentType</valueSetName>
    </valueSet>
</CustomField>