force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__SalesAccountedDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SalesAccountedDate__c</fullName>
    <label>SALES ACCOUNTED DATE</label>
    <type>Date</type>
</CustomField>