force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__SalesOrderID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SalesOrderID__c</fullName>
    <label>SALES ORDER ID</label>
    <referenceTo>clofor_com_cfs__SALES_ORDER__c</referenceTo>
    <relationshipLabel>TRS BILL</relationshipLabel>
    <relationshipName>TRSBill</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>