force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__SellCreditACCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellCreditACCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SELLING CREDIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>TRS BILL (SELLING CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>TRSBillSellCreditACCode</relationshipName>
    <type>Lookup</type>
</CustomField>