force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__SellDebitACCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellDebitACCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SELLING DEBIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>TRS BILL (SELLING DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>TRSBillSellDebitACCode</relationshipName>
    <type>Lookup</type>
</CustomField>