force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__SvcPricingName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SvcPricingName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SVC PRICING NAME</label>
    <referenceTo>clofor_com_cfs__TariffMaster__c</referenceTo>
    <relationshipLabel>TRS BILL</relationshipLabel>
    <relationshipName>TRSBillSvcPricingName</relationshipName>
    <type>Lookup</type>
</CustomField>