force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__TotalAmountOfBuyLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfBuyLocal__c</fullName>
    <label>TOTAL AMOUNT OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>