force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__Unit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Unit__c</fullName>
    <label>UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__PricingUnit</valueSetName>
    </valueSet>
</CustomField>