force-app/main/default/objects/clofor_com_cfs__TRSBill__c/fields/clofor_com_cfs__Weightofjumbobagsandpallets_MT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Weightofjumbobagsandpallets_MT__c</fullName>
    <label>Weight of jumbo bags and pallets (MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>