force-app/main/default/objects/clofor_com_cfs__TRSBill__c/recordTypes/clofor_com_cfs__GoodsPOBilling.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__GoodsPOBilling</fullName>
    <active>true</active>
    <label>Goods P/O Billing</label>
</RecordType>