force-app/main/default/objects/clofor_com_cfs__TRSBill__c/recordTypes/clofor_com_cfs__GoodsSOBilling.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__GoodsSOBilling</fullName>
    <active>true</active>
    <label>Goods S/O Billing</label>
</RecordType>