force-app/main/default/objects/clofor_com_cfs__TRSBill__c/recordTypes/clofor_com_cfs__GoodsSOPOBilling.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__GoodsSOPOBilling</fullName>
    <active>true</active>
    <label>Goods S/O+P/O Billing</label>
</RecordType>