force-app/main/default/objects/clofor_com_cfs__TRSBill__c/listViews/clofor_com_cfs__GoodsSOProductTRSBill.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__GoodsSOProductTRSBill</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__SalesOrderID__c</columns>
    <columns>clofor_com_cfs__GoodsSOProduct__c</columns>
    <columns>clofor_com_cfs__Customer__c</columns>
    <columns>clofor_com_cfs__BillNameAtPrintLocal__c</columns>
    <columns>clofor_com_cfs__ChargeUnitTotal__c</columns>
    <columns>clofor_com_cfs__TaxRatioSell__c</columns>
    <columns>clofor_com_cfs__InvoiceTo__c</columns>
    <columns>clofor_com_cfs__UnitPriceOfSellLocal__c</columns>
    <columns>clofor_com_cfs__TotalAmountOfSellLocal__c</columns>
    <columns>clofor_com_cfs__AmountSelliInclTAXLocal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__TRSBill__c.clofor_com_cfs__GoodsSOPOBilling</value>
    </filters>
    <label>Goods S/O+Product&lt;--&gt;TRS Bill</label>
</ListView>